--- a/404.html
+++ b/404.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<nav class="navbar navbar-light bg-light">
+<div class="navbar-brand"> <a href="index.html"> <h1 class="blog-title">MaraJadeLives</h1></a> <span class="navbar-text" class="nav-featured"><a href="featured-projects.html">Featured Projects</a></span>
+</nav>
 <h1>It looks like you clicked on a bad link.</h1>
 
   <h3>Please report it in <a href="https://github.com/MaraJadeLives/-MaraJadeLives.github.io/issues">Issues</a></h3>
