--- a/featured-projects.html
+++ b/featured-projects.html
@@ -17,8 +17,8 @@
 <div class="navbar-brand"> <a href="index.html"> <h1 class="blog-title">MaraJadeLives</h1></a> <span class="navbar-text" class="nav-featured"><a href="featured-projects.html">Featured Projects</a></span>
 </nav>
 
-  <h3><a href="#">Astrophotography</a></h3>
-  <h3><a href="#">Text Generation with textgenrnn</a>
+  <h3><a href="#">GPU Benchmarking</a></h3>
+  <h3><a href="https://marajadelives.github.io/textgen/textgenrnn.html">Text Generation with textgenrnn</a>
 
 
 </body>
