--- a/4x/index.html
+++ b/4x/index.html
@@ -21,6 +21,8 @@
 <p class="body-content">So, I got inspired to make a game based off the lore from an Sci-Fi book project of mine, and ended up colabbing with another nerd friend of mine to work on a game. I'm doing the website, lore, manual, and some of the graphics, especially the prototype ones. I look forward to updating this at some point down the line with aditional content.</p>
   <div class="image-block"><img src="#" alt="image from the game"></div>
   <p class="body-content">You start off playing as Her Majesty, Queen Ailyn Horne, as she attempts to gain allies to hold off the Sigma Analeian Empire. Good luck & safe stars!</p>
+
+  <p class="body-content">Update: Game was canceled, lore still exists.</p>
 </div> 
  
 
